SNOW-356508: keep SDK at Java 8 (#29)
1. Fix all the issues that prevents us from having a clean mvn install, and all the checks in the merge gate should be passing now!
2. After the HTTP change, we reduce majority of things that are depending on Java 11, this PR removes all the remaining dependencies on Java 11 and change it back to Java 8
3. Small optimization in RowBufferStats so that we don't compute the min/max string bytes array for every String inserted
4. Add getters for httpClient and requestBuilder
5. Some minor changes